--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,9 @@
 name: CI
 
+on:
+  - push
+  - pull_request
+
 jobs:
   build:
     name: Build
@@ -28,4 +32,4 @@ jobs:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
           opam-depext: false
 
-      - run: ./scripts.sh
+      - run: bash script.sh
