Update with public refmt

--- a/test/dune
+++ b/test/dune
@@ -1,7 +1,2 @@
 (cram
- (deps %{bin:ocamlc} %{bin:refmt_impl} input.re))
-
-(env
- (_
-  (binaries
-   (%{project_root}/src/refmt/refmt_impl.exe as refmt_impl))))
+ (deps %{bin:ocamlc} %{bin:refmt} input.re))
