--- a/.github/workflows/opam-ci.yml
+++ b/.github/workflows/opam-ci.yml
@@ -37,7 +37,7 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Use OCaml ${{ matrix.ocaml-compiler }}
         uses: ocaml/setup-ocaml@v2
