--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
 
-      - name: Load global cache (~/.esy/source)
-        uses: actions/cache@v3
+      - name: Restore global cache (~/.esy/source)
+        uses: actions/cache/restore@v3
         with:
           path: ~/.esy/source
           key: source-${{ matrix.os }}-${{ hashFiles('**/index.json') }}
@@ -60,8 +60,8 @@ jobs:
           echo "$ESY_CACHE"
 
       - name: Load dependencies cache
+        if: ${{ steps.print_esy_cache.outputs.ESY_CACHE }}
         id: deps-cache
-        if: ${{ steps.print_esy_cache.outputs.ESY_CACHE }} != ""
         uses: actions/cache@v3
         with:
           path: ${{ steps.print_esy_cache.outputs.ESY_CACHE }}
