--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	"homepage": "https://github.com/reasonml/reason",
 	"dependencies": {},
 	"devDependencies": {
-		"bs-platform": "1.9.3"
+		"bs-platform": "1.9.3",
+		"esy": "0.6.12"
 	},
 	"scripts": {
 		"prepublishOnly": "cp .dune-for-prepublish dune && esy @jsoo && ./js/closurefy.sh"
