--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -1,8 +1,14 @@
 name: esy CI
 
 on:
-  - push
-  - pull_request
+  pull_request:
+  push:
+   branches:
+     - main
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
