--- a/.github/workflows/opam-ci.yml
+++ b/.github/workflows/opam-ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
    branches:
-     - main
+     - master
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
