--- a/test/dune
+++ b/test/dune
@@ -1,2 +1,8 @@
+(env
+ (_
+  (env-vars
+   (REFMT_PRINT_WIDTH 50))))
+
 (cram
- (deps %{bin:ocamlc} %{bin:refmt} input.re))
+ (applies_to * \ lib)
+ (deps %{bin:ocamlc} %{bin:refmt} %{bin:typedtree_printer} %{bin:rtop}))
