Specify the name of the test with conditions

--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -84,11 +84,11 @@ jobs:
       - name: Build
         run: esy build
 
-      - name: Test
+      - name: Test for not Windows
         if: runner.os != 'Windows'
         run: esy dune runtest
 
-      - name: Test
+      - name: Test for Windows
         if: runner.os == 'Windows'
         run: esy b dune runtest -p reason,rtop
 
