Add debug cache

--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -64,7 +64,9 @@ jobs:
 
       - name: Print esy cache
         id: print_esy_cache
-        run: echo "ESY_CACHE=$(node .github/workflows/print-esy-cache.js)" >> $GITHUB_OUTPUT
+        run: |
+          node github/workflows/print-esy-cache-debug.js;
+          echo "ESY_CACHE=$(node .github/workflows/print-esy-cache.js)" >> $GITHUB_OUTPUT
 
       - name: Load dependencies cache
         if: ${{ steps.print_esy_cache.outputs.ESY_CACHE }}
