--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -93,13 +93,8 @@ jobs:
       - name: Build
         run: esy build
 
-      - name: Test when not Windows
-        if: runner.os != 'Windows'
+      - name: Test
         run: esy dune runtest
-
-      - name: Test when Windows
-        if: runner.os == 'Windows'
-        run: esy b dune runtest -p "reason,rtop"
 
       - name: Export dependencies
         if: steps.deps-cache.outputs.cache-hit != 'true'
