--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -28,12 +28,8 @@ jobs:
         ocaml-compiler:
           # Please keep the list in sync with the minimal version of OCaml in
           # esy.json, reason.esy/reason.opam and rtop.esy/rtop.opam.
-          - 4.06.x
-          # - 4.07.x
-          - 4.08.x
-          # - 4.09.x
+          - 4.06.x # We support 4.06 because is the one that is used in BuckleScript / ReScript v9
           - 4.10.x
-          # - 4.12.x
           - 4.13.x
           - 4.14.x
 
