--- a/.github/workflows/opam-ci.yml
+++ b/.github/workflows/opam-ci.yml
@@ -10,6 +10,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   build:
     name: Build
@@ -24,8 +28,7 @@ jobs:
         ocaml-compiler:
           # Please keep the list in sync with the minimal version of OCaml in
           # esy.json, reason.esy/reason.opam and rtop.esy/rtop.opam.
-          - 4.06.x
-          - 4.08.x
+          - 4.06.x # We support 4.06 because is the one that is used in BuckleScript / ReScript v9
           - 4.10.x
           - 4.13.x
           - 4.14.x
@@ -42,12 +45,33 @@ jobs:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
           opam-depext: false
           opam-pin: false
+          dune-cache: true
 
       - name: Install dependencies
         run: opam install . --deps-only
 
+      # Grab the cache if available. We tell dune to use $(pwd)/dune-cache/ in
+      # the custom_script below.
+      - uses: actions/cache/restore@v3
+        id: dune-cache
+        with:
+          path: dune-cache
+          key: opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
+          restore-keys: |
+            opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
+            opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-
+
       - name: Build reason and rtop
-        run: opam exec -- dune build -p reason,rtop
+        run: |
+          export DUNE_CACHE_ROOT=$(pwd)/dune-cache
+          opam exec -- dune build -p reason,rtop
+
+      - name: Save dependencies cache
+        if: steps.dune-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v3
+        with:
+          path: dune-cache
+          key: opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
 
       - name: Test
         run: opam exec -- dune runtest
