--- a/.github/workflows/opam-ci.yml
+++ b/.github/workflows/opam-ci.yml
@@ -43,34 +43,14 @@ jobs:
         uses: ocaml/setup-ocaml@v2
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
+          opam-depext: false
           opam-pin: false
-          dune-cache: true
 
       - name: Install dependencies
         run: opam install . --deps-only
 
-      # Grab the cache if available. We tell dune to use $(pwd)/dune-cache/ in
-      # the custom_script below.
-      - uses: actions/cache/restore@v3
-        id: dune-cache
-        with:
-          path: dune-cache
-          key: opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
-          restore-keys: |
-            opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
-            opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-
-
       - name: Build reason and rtop
-        run: |
-          export DUNE_CACHE_ROOT=$(pwd)/dune-cache
-          opam exec -- dune build -p reason,rtop
-
-      - name: Save dependencies cache
-        if: steps.dune-cache.outputs.cache-hit != 'true'
-        uses: actions/cache/save@v3
-        with:
-          path: dune-cache
-          key: opam-dune-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
+        run: opam exec -- dune build -p reason,rtop
 
       - name: Test
-        run: opam exec -- dune runtest --cache=disabled
+        run: opam exec -- dune runtest
