--- a/.github/workflows/opam-ci.yml
+++ b/.github/workflows/opam-ci.yml
@@ -43,14 +43,21 @@ jobs:
 
       - name: Load opam cache
         id: opam-cache
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v3
         with:
-          path: "~/.opam"
+          path: ~/.opam
           key: opam-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
 
       - name: Install dependencies
         if: steps.opam-cache.outputs.cache-hit != 'true'
         run: opam install . --deps-only
+
+      - name: Save cache
+        uses: actions/cache/save@v3
+        if: steps.opam-cache.outputs.cache-hit != 'true'
+        with:
+          path: ~/.opam
+          key: opam-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
 
       - name: Build reason and rtop
         run: opam exec -- dune build -p reason,rtop
