--- a/.github/workflows/opam-ci.yml
+++ b/.github/workflows/opam-ci.yml
@@ -53,9 +53,11 @@ jobs:
 
       - name: Debug ~
         run: ls -lsha ~
+        shell: bash
       
       - name: Debug .
         run: ls -lsha
+        shell: bash
 
       - name: Build reason and rtop
         run: opam exec -- dune build -p reason,rtop
