--- a/.github/workflows/opam-ci.yml
+++ b/.github/workflows/opam-ci.yml
@@ -76,14 +76,14 @@ jobs:
 
       - name: Save cache when not Windows
         uses: actions/cache/save@v3
-        if: steps.opam-cache.outputs.cache-hit != 'true' || runner.os != 'Windows'
+        if: steps.opam-cache.outputs.cache-hit != 'true' && runner.os != 'Windows'
         with:
           path: ~/.opam
           key: opam-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
 
       - name: Save cache when Windows
         uses: actions/cache/save@v3
-        if: steps.opam-cache-windows.outputs.cache-hit != 'true' || runner.os == 'Windows'
+        if: steps.opam-cache-windows.outputs.cache-hit != 'true' && runner.os == 'Windows'
         with:
           path: _opam
           key: opam-${{ matrix.os }}-${{ matrix.ocaml-compiler }}-${{ hashFiles('**.opam') }}
