--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -45,7 +45,7 @@ jobs:
           cache: 'npm'
 
       - name: Install esy
-        run: npm install -g esy@0.6.12
+        run: npm install -g --prefer-offline --no-audit esy@0.6.12
 
       - name: Restore global cache (~/.esy/source)
         id: global-cache
