--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -42,10 +42,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
+          cache: 'yarn'
 
       - name: Install esy
-        run: npm install -g --prefer-offline --no-audit esy@0.6.12
+        run: yarn add global --prefer-offline esy@0.6.12
 
       - name: Restore global cache (~/.esy/source)
         id: global-cache
