--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -44,8 +44,13 @@ jobs:
           node-version: 16
           cache: 'yarn'
 
-      - name: Install esy
-        run: yarn add global --prefer-offline esy@0.6.12
+      - name: Install esy when Windows
+        if: runner.os == 'Windows'
+        run: yarn global add --prefer-offline esy@0.6.12
+      
+      - name: Install esy when not Windows
+        if: runner.os != 'Windows'
+        run: yarn global add --prefer-offline --prefix /usr/local esy@0.6.12
 
       - name: Restore global cache (~/.esy/source)
         id: global-cache
