--- a/.github/workflows/esy-ci.yml
+++ b/.github/workflows/esy-ci.yml
@@ -38,14 +38,21 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'yarn'
-      
+          cache: 'npm'
+
       - name: Install esy
-        run: yarn global add --prefix /usr/local esy@0.6.12
+        run: npm install --prefer-offline --audit false
+
+      - name: Expose esy as binary
+        if: runner.os == 'Windows'
+        run: echo "node_modules\.bin" >> $GITHUB_PATH
+
+      - name: Expose esy as binary
+        if: runner.os != 'Windows'
+        run: echo "node_modules/.bin" >> $GITHUB_PATH
 
       - name: Restore global cache (~/.esy/source)
         id: global-cache
